--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Objects & Arrays</h1>
+        <h1>Objects & Arrays with Friends</h1>
     </header>
 
     <section class="friends container" id="friendsDiv">
